- Refined index content

--- a/roles/nginx/templates/configmap.yaml.j2
+++ b/roles/nginx/templates/configmap.yaml.j2
@@ -6,12 +6,11 @@ metadata:
   namespace: {{ pg_namespace }}
 data:
   index.html: |
-    <!doctype html>
     <html>
-      <head>
-        <title>Website</title>
-      </head>
       <body>
-        <p>Sorry, this website it currently offline.</p>
+        <p style="text-align: center;">
+          <span style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Sorry</span>
+          but this website is temporarily out of service
+        </p>
       </body>
     </html>
