--- a/roles/nginx/templates/configmap.yaml.j2
+++ b/roles/nginx/templates/configmap.yaml.j2
@@ -3,7 +3,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: nginx
-  namespace: {{ pg_namespace }}
+  namespace: {{ nx_namespace }}
 data:
   index.html: |
     <html>
