- Experiment with content variable

--- a/roles/nginx/templates/configmap.yaml.j2
+++ b/roles/nginx/templates/configmap.yaml.j2
@@ -6,11 +6,4 @@ metadata:
   namespace: {{ nx_namespace }}
 data:
   index.html: |
-    <html>
-      <body>
-        <p style="text-align: center;">
-          <span style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Sorry</span>
-          but this website is temporarily out of service
-        </p>
-      </body>
-    </html>
+    {{ nx_content }}
