- Support for serviceaccount pullsecret

--- a/roles/nginx/templates/serviceaccount.yaml.j2
+++ b/roles/nginx/templates/serviceaccount.yaml.j2
@@ -4,3 +4,7 @@ apiVersion: v1
 metadata:
   name: nginx
   namespace: {{ nx_namespace }}
+{% if nx_dockerhub_pullsecret %}
+imagePullSecrets:
+- name: dockerhub-pull-secret
+{% endif %}
